--- a/gb/24/10/10/n14347634.md
+++ b/gb/24/10/10/n14347634.md
@@ -11,7 +11,7 @@
 	<p>【大纪元2024年10月10日讯】（大纪元记者陈霆综合报导）周三（10月9日）晚间，飓风米尔顿（Milton）以三级风暴的强度，正式在佛州登陆，将带来强风、大雨，以及致命的风暴潮。</p>
 <p>美国国家飓风中心表示，米尔顿于美东时间晚间8:30在佛罗里达州西耶斯达岛（Siesta Key）附近登陆，其最大持续风速为每小时120英里。</p>
 <blockquote class="twitter-tweet" data-media-max-width="560">
-<p dir="ltr" lang="en">Major Hurricane Milton has officially made landfall near Siesta Key, FL at 8:30 PM EDT.<ahref="https://t.co/aKfNZ0vOdZ">https://t.co/aKfNZ0vOdZ</a> <ahref="https://t.co/MbCkAd6lOf"></a><a href="https://d200ccn4ewjn2r.cloudfront.net/A4bZj2zBq"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="MbCkAd6lOf</a></p>
+<p dir="ltr" lang="en">Major Hurricane Milton has officially made landfall near Siesta Key, FL at 8:30 PM EDT.<ahref="https://t.co/aKfNZ0vOdZ">https://t.co/aKfNZ0vOdZ</a> <ahref="https://t.co/MbCkAd6lOf"></a><a href="https://d1xqyoddjp48c4.cloudfront.net/V0sZj2zBl"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="MbCkAd6lOf</a></p>
 <p>— NWS Miami (@NWSMiami) <ahref="https://twitter.com/NWSMiami/status/1844179857762287787?ref_src=twsrc%5Etfw">October 10, 2024</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <p>“随着米尔顿沿佛罗里达西海岸向内陆移动，危及生命的风暴潮、强风和山洪仍持续发生。”美国国家飓风中心在9点的更新中表示。</p>
@@ -65,7 +65,7 @@
 <p>美国职棒大联盟球队“坦帕湾光芒”（Tampa Bay Rays）的主场是“纯品康纳室内球场”（Tropicana Field）似乎因飓风而严重受损。</p>
 <p>社交平台上流传的影像显示，圆顶建筑屋顶的织物已被撕成碎片。目前尚不清楚体育场内是否有损坏。</p>
 <p>光芒队的球场没有被用作避难所，但根据《坦帕湾时报》报导，它被用作“工人的集结地”，这些工人到此，准备为风暴的破坏处理善后。</p>
-<p dir="ltr" lang="en">The view from our window as we ride out the storm. The roof of Tropicana Field is destroyed by the winds of <ahref="https://twitter.com/hashtag/HurricaneMilton?src=hash&amp;ref_src=twsrc%5Etfw">#HurricaneMilton</a>. Praying for Tampa Bay and all areas affected. Stay safe, everyone <ahref="https://t.co/uy0aNGMAuJ"></a><a href="https://d200ccn4ewjn2r.cloudfront.net/A4bZj2zBq"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uy0aNGMAuJ</a></p>
+<p dir="ltr" lang="en">The view from our window as we ride out the storm. The roof of Tropicana Field is destroyed by the winds of <ahref="https://twitter.com/hashtag/HurricaneMilton?src=hash&amp;ref_src=twsrc%5Etfw">#HurricaneMilton</a>. Praying for Tampa Bay and all areas affected. Stay safe, everyone <ahref="https://t.co/uy0aNGMAuJ"></a><a href="https://d1xqyoddjp48c4.cloudfront.net/V0sZj2zBl"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uy0aNGMAuJ</a></p>
 <p>— Dave Moore (@DaveMoore_83) <ahref="https://twitter.com/DaveMoore_83/status/1844210561896296718?ref_src=twsrc%5Etfw">October 10, 2024</a></p></blockquote>
 <h2>风势过大 坦帕市消防局停止紧急服务</h2>
 <p>美国坦帕市消防局长表示，米尔顿飓风风速超过100英里/小时，在强风中行动过于危险，将停止紧急服务，直到救难人员可安全上路为止。</p>
@@ -75,11 +75,9 @@
 <p>根据白宫的一份声明，美国总统拜登（Joe Biden）在米尔顿飓风登陆后，已听取了简报。</p>
 <p>白宫表示：“拜登总统和哈里斯副总统收到了政府成员的简报，内容涉及飓风米尔顿的最新预测、对佛州的预期影响，以及正在进行的登陆前准备工作。”</p>
 <p>“拜登总统今晚将就飓风米尔顿向全国发表演说。”白宫表示。</p>
-<blockquote class="twitter-tweet" data-media-max-width="560">
 <p dir="ltr" lang="en">President Biden and Vice President Harris received a briefing today on preparations for Hurricane Milton and the ongoing response to Hurricane Helene.</p>
-<p>We urge everyone in Hurricane Milton’s path to follow all safety instructions as we head into the next 24 hours. <ahref="https://t.co/2S2nGMtGLj"></a><a href="https://d200ccn4ewjn2r.cloudfront.net/A4bZj2zBq"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="2S2nGMtGLj</a></p>
+<p>We urge everyone in Hurricane Milton’s path to follow all safety instructions as we head into the next 24 hours. <ahref="https://t.co/2S2nGMtGLj"></a><a href="https://d1xqyoddjp48c4.cloudfront.net/V0sZj2zBl"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="2S2nGMtGLj</a></p>
 <p>— The White House (@WhiteHouse) <ahref="https://twitter.com/WhiteHouse/status/1844154629036159229?ref_src=twsrc%5Etfw">October 9, 2024</a></p></blockquote>
-<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <h2>佛州马丁县报告多人受伤 数十栋房屋受损</h2>
 <p>佛罗里达州马丁县（Martin County）官员表示，当地已有多人受伤，数十栋房屋受损。</p>
 <p>马丁县消防救援队 (Martin County Fire Rescue) 周三晚间在X上发布消息称，一些民宅已遭到“严重”破坏，并传出人员受到轻重伤的报告，所幸尚未有人丧生。</p>
@@ -106,14 +104,14 @@
 <p>拜登总统周二表示，密尔顿可能是佛罗里达州一百多年来最严重的风暴。</p>
 <p>责任编辑：李沐恩</p>
 	
-<hr>
+
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347739.md#1">美国女子住宅遭上百只浣熊包围 皆因她一动作</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347659.md#1">川普：选战已近尾声 不再和贺锦丽辩论</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347775.md#1">盼遏止治安恶化 华人社区力撑36号公投案</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347710.md#1">飞行员心脏病发作 无飞行经验妻子成功迫降</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/25/n11612784.md#1" target="_blank">袁斌：韦君宜的后悔与林牧的反思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
@@ -136,6 +134,5 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346351.md#1">想了解空服员吗？ 先看这个工作的优缺点比较</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342967.md#1">案例分析：信仰对健康具深远影响</a></li>
-<hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/10/n14347634.htm">【更新】米尔顿横扫佛州 近三百万户停电</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347634.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
